--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Apolz - App Landing Page HTML Template
-    Template URI: site.com
-    Description: Apolz - App Landing Page HTML Template
-    Author: MD THAHERIL ISLAM
-    Author URI: site.com
-    Version: 1.0
+    Template Name: Time captain
+    Template URI: https://sal562.github.io/timecaptn/
+    Description: Time captain
+    Author: Time captain
+    Author URI: https://sal562.github.io/timecaptn/
+    Version: 1.1
 
 -----------------------------------------------------------------------------------
 
@@ -132,7 +132,7 @@ p {
   font-size: 14px;
   line-height: 52px;
   border-radius: 0px;
-  color: #fff;
+  color: #F8FDFE;
   cursor: pointer;
   z-index: 5;
   -webkit-transition: all 0.4s ease-out 0s;
@@ -140,7 +140,7 @@ p {
   -ms-transition: all 0.4s ease-out 0s;
   -o-transition: all 0.4s ease-out 0s;
   transition: all 0.4s ease-out 0s;
-  background-color: #ffb03c;
+  background-color: #F8FDFE;
   border-radius: 40px;
   overflow: hidden;
   position: relative;
