diabled some Buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ p {
 }
 /*===== CodePen Bootstap Download APP Button Style =====*/
 .btn-store {
-  color: #777777;
+  color: #0f0f0f;
   min-width: 254px;
   padding: 12px 20px !important;
   border-color: #dddddd !important;
@@ -144,20 +144,21 @@ p {
 .btn-store:focus,
 .btn-store:hover {
   color: #ffffff !important;
-  background-color: #168eea;
-  border-color: #168eea !important;
+  background-color: #93ccea;
+  border-color: #93ccea !important;
 }
 
 .btn-store .btn-label,
 .btn-store .btn-caption {
   display: block;
-  text-align: left;
+  text-align: center;
   line-height: 1;
 }
 
 .btn-store .btn-caption {
   font-size: 24px;
 }
+/*===== END CodePen Bootstap Download APP Button Style =====*/
 
 /*===== All Button Style =====*/
 .main-btn {
