--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2272,6 +2272,20 @@ p {
   content: "02";
 }
 
+.customers-area .customers-content .item.mt-40 p::before {
+  background-image: -moz-linear-gradient(0deg, #fa5a5a 0%, #aedcfe 100%);
+  background-image: -webkit-linear-gradient(0deg, #fa5a5a 0%, #aedcfe 100%);
+  background-image: -ms-linear-gradient(0deg, #fa5a5a 0%, #aedcfe 100%);
+  content: "03";
+}
+
+.customers-area .customers-content .item.mt-45 p::before {
+  background-image: -moz-linear-gradient(0deg, #fc0cc0 0%, #aedcfe 100%);
+  background-image: -webkit-linear-gradient(0deg, #fc0cc0 0%, #aedcfe 100%);
+  background-image: -ms-linear-gradient(0deg, #fc0cc0 0%, #aedcfe 100%);
+  content: "04";
+}
+
 /*===========================
     8.VIDEO PLAY css 
 ===========================*/
